Merged revisions 4245-4341 via svnmerge from https://svn.terracotta.org/repo/tc/dso/branches/2.4